--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -243,6 +243,7 @@
   year : '2019'
 - name : Adhithya P.
   degree : Bachelor of Science (Research)
+  present: "Graduate student at Penn State University"
   year : '2019'
 - name : Sidharth P. Jacob
   degree : Bachelor of Science (Research)
