--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -412,3 +412,22 @@
   degree : Bachelor of Science (Research) & Master of Science
   year : '2021'
 
+
+- name : Shreyas Bhat
+  degree : Bachelor of Science (Research)
+  year : '2022
+- name : Sutanay Bhattacharya
+  degree : Bachelor of Science (Research)
+  present: "Graduate student at University of California at San Diego"
+  year : '2022
+- name : Chinamy S. Ingalgavi
+  degree : Bachelor of Science (Research)
+  present: "Graduate student at London School of Economics"
+  year : '2022
+- name : Akash Kannan
+  degree : Bachelor of Science (Research)
+  present: "Graduate Student at Carnegie Mellon University"
+  year : '2022
+- name : Tushar Reddy Mopuri
+  degree : Bachelor of Science (Research)
+  year : '2022
