--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -431,3 +431,28 @@
 - name : Tushar Reddy Mopuri
   degree : Bachelor of Science (Research)
   year : '2022
+- name : Abhilash Mukherjee
+  degree : Bachelor of Science (Research)
+  present: "Graduate Student at University of Cambridge"
+  year : '2022
+- name : Susheel Shankar
+  degree : Bachelor of Science (Research)
+  year : '2022
+- name : Pulkit Sinha
+  degree : Bachelor of Science (Research)
+  present: "Graduate Student at University of Waterloo"
+  year : '2022
+- name : Shekhar Devm Upadhyay
+  degree : Bachelor of Science (Research)
+  present: "Graduate Student at KTH Royal Institute of Technology"
+  year : '2022
+
+- name : Nabarun Deka
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2022'
+- name : Piyush Bhuwan Sati
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2022'
+- name : Adithya Upadhya
+  degree : Bachelor of Science (Research) & Master of Science
+  year : '2022'
