--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -415,37 +415,37 @@
 
 - name : Shreyas Bhat
   degree : Bachelor of Science (Research)
-  year : '2022
+  year : '2022'
 - name : Sutanay Bhattacharya
   degree : Bachelor of Science (Research)
   present: "Graduate student at University of California at San Diego"
-  year : '2022
+  year : '2022'
 - name : Chinamy S. Ingalgavi
   degree : Bachelor of Science (Research)
   present: "Graduate student at London School of Economics"
-  year : '2022
+  year : '2022'
 - name : Akash Kannan
   degree : Bachelor of Science (Research)
   present: "Graduate Student at Carnegie Mellon University"
-  year : '2022
+  year : '2022'
 - name : Tushar Reddy Mopuri
   degree : Bachelor of Science (Research)
-  year : '2022
+  year : '2022'
 - name : Abhilash Mukherjee
   degree : Bachelor of Science (Research)
   present: "Graduate Student at University of Cambridge"
-  year : '2022
+  year : '2022'
 - name : Susheel Shankar
   degree : Bachelor of Science (Research)
-  year : '2022
+  year : '2022'
 - name : Pulkit Sinha
   degree : Bachelor of Science (Research)
   present: "Graduate Student at University of Waterloo"
-  year : '2022
+  year : '2022'
 - name : Shekhar Devm Upadhyay
   degree : Bachelor of Science (Research)
   present: "Graduate Student at KTH Royal Institute of Technology"
-  year : '2022
+  year : '2022'
 
 - name : Nabarun Deka
   degree : Bachelor of Science (Research) & Master of Science
