--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,29 @@
+- name: "Mrigendra Singh Kushwaha"
+  position: "Raman PDF"
+  phd: "Ph.D., IMSc, Chennai"
+  area: "Representation Theory"
+  start: "2021"
+  end: "2022"
+  present:
+
+- name: "Deb Kumar Giri"
+  position: "NBHM"
+  phd: "Ph.D., IIT Guwahati"
+  area: "Harmonic Analysis"
+  start: 
+  end: 
+  present:
+
+- name: "Gouranga Mallik"
+  position: "Raman PDF"
+  phd: "Ph.D., IIT Bombay"
+  area: "PDE, finite element method"
+  start: 
+  end: 
+  present:
+
+
+
 - name: "Anoop V. P"
   position: "NPDF"
   phd: "NISER Bhubaneswar"
