--- a/_data/trainee.yaml
+++ b/_data/trainee.yaml
@@ -1,8 +1,13 @@
 - name: S. Shanmugavel
   user-id: library.math
+  phone-ext: 
+  office: R11
   image: true
 
 - name: R. Thirunavukkarasu
   user-id: thirunavukka
+  phone-ext: 2514
+  office: R14
   image: true
+  webpage: https://sites.google.com/view/mrtarasu/
   
