--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -430,6 +430,7 @@
   year : '2022'
 - name : Tushar Reddy Mopuri
   degree : Bachelor of Science (Research)
+  present: "Visitor, Crypto group, Aarhus University"
   year : '2022'
 - name : Abhilash Mukherjee
   degree : Bachelor of Science (Research)
@@ -437,6 +438,7 @@
   year : '2022'
 - name : Susheel Shankar
   degree : Bachelor of Science (Research)
+  present: "Graduate Student at Weizmann Institute of Science"
   year : '2022'
 - name : Pulkit Sinha
   degree : Bachelor of Science (Research)
