--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -451,10 +451,12 @@
 
 - name : Nabarun Deka
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate Student in Computer Science at UIUC"
   year : '2022'
 - name : Piyush Bhuwan Sati
   degree : Bachelor of Science (Research) & Master of Science
   year : '2022'
 - name : Adithya Upadhya
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate Student at Northwestern University"
   year : '2022'
