--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -426,7 +426,7 @@
   year : '2022'
 - name : Akash Kannan
   degree : Bachelor of Science (Research)
-  present: "Graduate Student at Carnegie Mellon University"
+  present: "Graduate student at Carnegie Mellon University"
   year : '2022'
 - name : Tushar Reddy Mopuri
   degree : Bachelor of Science (Research)
@@ -434,29 +434,29 @@
   year : '2022'
 - name : Abhilash Mukherjee
   degree : Bachelor of Science (Research)
-  present: "Graduate Student at University of Cambridge"
+  present: "Graduate student at University of Cambridge"
   year : '2022'
 - name : Susheel Shankar
   degree : Bachelor of Science (Research)
-  present: "Graduate Student at Weizmann Institute of Science"
+  present: "Graduate student at Weizmann Institute of Science"
   year : '2022'
 - name : Pulkit Sinha
   degree : Bachelor of Science (Research)
-  present: "Graduate Student at University of Waterloo"
+  present: "Graduate student at University of Waterloo"
   year : '2022'
 - name : Shekhar Devm Upadhyay
   degree : Bachelor of Science (Research)
-  present: "Graduate Student at KTH Royal Institute of Technology"
+  present: "Graduate student at KTH Royal Institute of Technology"
   year : '2022'
 
 - name : Nabarun Deka
   degree : Bachelor of Science (Research) & Master of Science
-  present: "Graduate Student in Computer Science at UIUC"
+  present: "Graduate student in Computer Science at UIUC"
   year : '2022'
 - name : Piyush Bhuwan Sati
   degree : Bachelor of Science (Research) & Master of Science
   year : '2022'
 - name : Adithya Upadhya
   degree : Bachelor of Science (Research) & Master of Science
-  present: "Graduate Student at Northwestern University"
+  present: "Graduate student at Northwestern University"
   year : '2022'
