--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -392,6 +392,7 @@
   year : '2021'
 - name : Anirban Mandal
   degree : Bachelor of Science (Research) & Master of Science
+  present: "Founder & Proprietor, Urban Jugaad"
   year : '2021'
 - name : Shubham Kumar Pandey
   degree : Bachelor of Science (Research) & Master of Science
@@ -420,7 +421,7 @@
   degree : Bachelor of Science (Research)
   present: "Graduate student at University of California at San Diego"
   year : '2022'
-- name : Chinamy S. Ingalgavi
+- name : Chinamy S. Ingalagavi
   degree : Bachelor of Science (Research)
   present: "Graduate student at London School of Economics"
   year : '2022'
