--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -416,6 +416,7 @@
 
 - name : Shreyas Bhat
   degree : Bachelor of Science (Research)
+  present: "Graduate student in Computer Science at Columbia University"
   year : '2022'
 - name : Sutanay Bhattacharya
   degree : Bachelor of Science (Research)
