--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -4,7 +4,7 @@
   area: "Representation Theory"
   start: "2021"
   end: "2022"
-  present:
+  present: "Assistant Professor, University of Delhi - South Campus"
 
 - name: "Deb Kumar Giri"
   position: "NBHM"
@@ -505,7 +505,7 @@
   area: "Mathematical finance"  
   start: "2009"  
   end: "2009"  
-  present: 
+  present: "TheMathCompany"
 
 - name: "Hemangi Shah"  
   position: "CPDF"  
