--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,6 +1,6 @@
 - name: "Mrigendra Singh Kushwaha"
   position: "Raman PDF"
-  phd: "Ph.D., IMSc, Chennai"
+  phd: "IMSc, Chennai"
   area: "Representation Theory"
   start: "2021"
   end: "2022"
@@ -8,7 +8,7 @@
 
 - name: "Deb Kumar Giri"
   position: "NBHM"
-  phd: "Ph.D., IIT Guwahati"
+  phd: "IIT Guwahati"
   area: "Harmonic Analysis"
   start: 
   end: 
@@ -16,7 +16,7 @@
 
 - name: "Gouranga Mallik"
   position: "Raman PDF"
-  phd: "Ph.D., IIT Bombay"
+  phd: "IIT Bombay"
   area: "PDE, finite element method"
   start: "2018"
   end: "2022"
