--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,11 @@
+- name: Geethika Sebastian
+  position: UGC Kothari
+  phd: IIT Hyderabad 
+  area: Functional Analysis
+  start: "2019"
+  end: "2022"
+  present: Instructor, IISc, Bangalore
+
 - name: "Mrigendra Singh Kushwaha"
   position: "Raman PDF"
   phd: "IMSc, Chennai"
