Updated Int PhD Student 2016 List

--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -228,6 +228,7 @@
   image: true
   guide: Vamsi Pritham Pingali
   scholarship: IISc
+  webpage: https://sites.google.com/view/kartickghosh/home?authuser=0
 
 
 - name	:	Pabitra Barman
