--- a/_data/instructors.yaml
+++ b/_data/instructors.yaml
@@ -7,5 +7,5 @@
 - name: Manpreet Singh
   phd: IIT Delhi
   user-id: manpreets
-  image: true
+  image: false
   research-area: Topological Dynamics
