--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -77,6 +77,7 @@ jan2023:
   - name: Proofs and Programs
     code: MA 208
     instructor: Siddhartha Gadgil
+    credits: '3:1'
     webpage: "http://math.iisc.ac.in/~gadgil/proofs-and-programs-2023/"
   - name: Introduction to Modular Forms
     instructor: Mahesh Kakde 
