Updated Postdoc and Alumni Postdoc

--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,11 @@
+- name: Gargi Ghosh
+  position: Raman PDF
+  phd: IISER Kolkata
+  area: Operator Theory
+  start: "2021"
+  end: "2022"
+  present:
+
 - name: Geethika Sebastian
   position: UGC Kothari
   phd: IIT Hyderabad 
