Added Postdoc Jyotirmoy Ganguly

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -114,8 +114,8 @@
 
 - name: Jyotirmoy Ganguly
   webpage:
-  phd: 
+  phd: IISER Pune
   user-id: jyotirmoyg
   position: NBHM
   image: true
-  research-area:   
+  research-area: Representation Theory   
