Updated Postdoc, Inspire Fellow, Alumni Postdoc

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -30,3 +30,8 @@
   user-id : sshraddha
   image: true  
 
+- name: Biltu Dan (Ph.D., ISI)
+  position: Inspire Fellow
+  research-areas: Probability Theory
+  user-id: biltudan
+  image: true
