--- a/_data/postdoc-alumni.yaml
+++ b/_data/postdoc-alumni.yaml
@@ -1,3 +1,11 @@
+- name: Biltu Dan
+  position: Raman PDF
+  phd: ISI
+  area: Probability Theory
+  start: "2021"
+  end: "2023"
+  present: Inspire Fellow, IISc, Bangalore
+
 - name: Gargi Ghosh
   position: Raman PDF
   phd: IISER Kolkata
