Added Postdocs Dr. Debaprasanna Kar and Dr. Ravitheja Vangala

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -123,3 +123,20 @@
   research-area: Representation theory, Combinatorics
 
 
+- name: Debaprasanna Kar
+  webpage:
+  phd: IISER Pune
+  user-id: debaprasanna
+  position: NBHM PDF
+  image: true
+  research-area: Several Complex Variables
+
+- name: Ravitheja Vangala
+  webpage:
+  phd: TIFR Mumbai
+  user-id: ravithejav
+  position: Research Associate
+  image: true
+  research-area: Number Theory
+
+
