Added Postdoc Dr. Banhirup Sengupta, Dr. Susmita Das and Inspire Fellow Dr. Vineeth Chintala

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -35,3 +35,12 @@
   research-areas: Probability Theory
   user-id: biltudan
   image: true
+
+- name: Vineeth Chintala (Ph.D., )
+  position: Inspire Fellow
+  research-areas: 
+  user-id: vineethc
+  image: true
+
+
+
