Updated Postdoc and Inspire fellow

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -36,9 +36,9 @@
   user-id: biltudan
   image: true
 
-- name: Vineeth Chintala (Ph.D., )
+- name: Vineeth Chintala (Ph.D., Tata Institute of Funamental Research, Mumbai)
   position: Inspire Fellow
-  research-areas: 
+  research-areas: Algebra, Quadratic forms, Behavioural Economics, Market Design
   user-id: vineethc
   image: true
 
