Updated Inspire fellow

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -36,7 +36,7 @@
   user-id: biltudan
   image: true
 
-- name: Vineeth Chintala (Ph.D., Tata Institute of Funamental Research, Mumbai)
+- name: Vineeth Chintala (Ph.D., Tata Institute of Fundamental Research, Mumbai)
   position: Inspire Fellow
   research-areas: Algebra, Quadratic forms, Behavioural Economics, Market Design
   user-id: vineethc
