--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -155,7 +155,13 @@
   image: true
   research-area: Operator Theory
 
-
+- name: Somnath Ghosh
+  webpage:
+  phd: IIT Guwahati
+  user-id: somnathghosh
+  position: NBHM PDF
+  image: true
+  research-area: Harmonic Analysis
 
 
 
