--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -462,3 +462,66 @@
   degree : Bachelor of Science (Research) & Master of Science
   present: "Graduate student at Northwestern University"
   year : '2022'
+
+
+- name: Sai Sanjeev Balakrishnan
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at University of Cambridge"
+  year: '2023'
+- name: Aritra Chatterjee
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at Stony Brook University"
+  year: '2023'
+- name: Arka Das
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at Purdue University"
+  year: '2023'
+- name: Spandan Ghosh
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at Oxford University"
+  year: '2023'
+- name: Prashant Gokhale
+  degree: Bachelor of Science (Research)
+  present: "Graduate student in Computer Science at University of Waterloo"
+  year: '2023'
+- name: Anish Shripad Hebbar
+  degree: Bachelor of Science (Research)
+  present: "Graduate student in Computer Science at Duke University"
+  year: '2023'
+- name: Sarvagya Jain
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at University of Turku"
+  year: '2023'
+- name: Sauditya Jaiswal
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at ETH Zurich"
+  year: '2023'
+- name: Dhruv Medhuri
+  degree: Bachelor of Science (Research)
+  present: "Graduate student in Computer Science at University of Utah"
+  year: '2023'
+- name: Souptik Mudi
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at University of British Columbia"
+  year: '2023'
+- name: Rutwik Pasani
+  degree: Bachelor of Science (Research)
+  present: "Graduate student in Quantitative Finance at ETH Zurich"
+  year: '2023'
+- name: Sundararajan Srinivasan
+  degree: Bachelor of Science (Research)
+  present: "Graduate student in ECE at University of Texas at Austin"
+  year: '2023'
+- name: Shreepranav Varma Enugandla
+  degree: Bachelor of Science (Research)
+  present: "Graduate student at University of California at Berkeley"
+  year: '2023'
+
+- name : Umang Bhat
+  degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student at Indiana University at Bloomington"
+  year : '2023'
+- name : Meghal Sachdev
+  degree : Bachelor of Science (Research) & Master of Science
+  present: "Graduate student in Math Finance at Imperial College London"
+  year : '2023'
