--- a/_data/ug-alumni.yaml
+++ b/_data/ug-alumni.yaml
@@ -521,6 +521,14 @@
   degree : Bachelor of Science (Research) & Master of Science
   present: "Graduate student at Indiana University at Bloomington"
   year : '2023'
+- name : Dhanus M. Lal
+  degree : Bachelor of Science (Research) & Master of Science
+  present: "Software Engineer at Fujitsu Research India"
+  year : '2023'
+- name : Prathamesh Gajanan Patil
+  degree : Bachelor of Science (Research) & Master of Science
+  present: "Data Scientist at Kare4U"
+  year : '2023'
 - name : Meghal Sachdev
   degree : Bachelor of Science (Research) & Master of Science
   present: "Graduate student in Math Finance at Imperial College London"
