--- a/.github/workflows/jekyll-test.yml
+++ b/.github/workflows/jekyll-test.yml
@@ -20,12 +20,12 @@ jobs:
         bundle update github-pages 
         bundle install --without development test 
         bundle exec jekyll build --config _config.yml,_config-root.yml
-    # - name: Set up JDK 1.8
-    #   uses: actions/setup-java@v1
-    #   with:
-    #     java-version: 1.8
-    # - name: Test for broken links
-    #   run: ./amm checklinks.sc
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Test for broken links
+      run: ./amm checklinks.sc
 
       
 
