Updated Inspire Fellow and Kartick Ghosh Thesis Defence

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -41,6 +41,6 @@
   research-areas: Algebra, Quadratic forms, Behavioural Economics, Market Design
   user-id: vineethc
   image: true
-
+  webpage: https://sites.google.com/view/vineethchintala/home
 
 
