Updated Nishu Kumari Venue and Added Postdoc Dr. Pinakinath Saha

--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -163,5 +163,13 @@
   image: true
   research-area: Harmonic Analysis
 
+- name: Pinakinath Saha
+  webpage: https://sites.google.com/view/pinakinath
+  phd: Chennai Mathematical Institute (CMI)
+  user-id: pinakinaths
+  position: NBHM PDF
+  image: true
+  research-area: Algebraic geometry and Representation theory
+
 
 
